--- a/src/server/scripts/Pandaria/CMakeLists.txt
+++ b/src/server/scripts/Pandaria/CMakeLists.txt
@@ -12,6 +12,7 @@ set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
   Pandaria/boss_sha_of_anger.cpp
   Pandaria/boss_galion.cpp
+  Pandaria/boss_nalak.cpp
   Pandaria/boss_chi_ji.cpp
   Pandaria/boss_niuzao.cpp
   Pandaria/boss_ordos.cpp
